# Vocab-Master-2000

./: README.md
vocab_master/: README.md  pyproject.toml
vocab_master/src/vocab_master/: crew.py  main.py
vocab_master/src/vocab_master/config/: agents.yaml  tasks.yaml
