[tool.poetry]
name = "vocab_master"
version = "0.1.0"
description = "vocab_master using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.51.0" }

[tool.poetry.scripts]
vocab_master = "vocab_master.main:run"
run_crew = "vocab_master.main:run"
train = "vocab_master.main:train"
replay = "vocab_master.main:replay"
test = "vocab_master.main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
